CSE_307/python/ply_language/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> block
Rule 1     block -> LBRACE inblock RBRACE
Rule 2     block -> LBRACE RBRACE
Rule 3     inblock -> smt inblock
Rule 4     inblock -> block inblock
Rule 5     inblock -> smt
Rule 6     inblock -> block
Rule 7     smt -> print_smt
Rule 8     smt -> assign
Rule 9     smt -> boolean
Rule 10    print_smt -> PRINT LPAREN expression RPAREN SEMI
Rule 11    print_smt -> PRINT LPAREN VAR RPAREN SEMI
Rule 12    expression -> expression PLUS expression
Rule 13    expression -> expression MINUS expression
Rule 14    expression -> expression TIMES expression
Rule 15    expression -> expression DIVIDE expression
Rule 16    expression -> expression GREATER expression
Rule 17    expression -> expression LESS expression
Rule 18    expression -> expression MOD expression
Rule 19    expression -> expression EXPONENT expression
Rule 20    expression -> expression GREATEQ expression
Rule 21    expression -> expression LESSEQ expression
Rule 22    expression -> expression AND expression
Rule 23    expression -> expression OR expression
Rule 24    expression -> expression EQUALS expression
Rule 25    expression -> expression IN expression
Rule 26    expression -> expression NOTEQUALTO expression
Rule 27    expression -> expression FLOORDIVIDE expression
Rule 28    expression -> factor
Rule 29    factor -> NUMBER
Rule 30    expression -> boolean
Rule 31    boolean -> TRUE
Rule 32    boolean -> FALSE
Rule 33    word -> STR
Rule 34    expression -> word
Rule 35    expression -> LPAREN expression RPAREN
Rule 36    array -> LSQUARE list RSQUARE
Rule 37    list -> element COMMA list
Rule 38    list -> element list
Rule 39    list -> element
Rule 40    element -> expression
Rule 41    index -> array LSQUARE expression RSQUARE
Rule 42    expression -> index
Rule 43    assign -> VAR VARASSIGN expression SEMI
Rule 44    expression -> variable
Rule 45    variable -> VAR
Rule 46    assign -> VAR VARASSIGN array SEMI
Rule 47    listeval -> VAR LSQUARE expression RSQUARE
Rule 48    expression -> listeval
Rule 49    ifsmt -> IF LPAREN expression RPAREN block
Rule 50    ifelsesmt -> IF LPAREN expression RPAREN block ELSE block
Rule 51    smt -> ifelsesmt
Rule 52    smt -> ifsmt
Rule 53    whilesmt -> WHILE LPAREN expression RPAREN block
Rule 54    smt -> whilesmt

Terminals, with rules where they appear

AND                  : 22
COMMA                : 37
DIVIDE               : 15
ELSE                 : 50
EQUALS               : 24
EXPONENT             : 19
FALSE                : 32
FLOORDIVIDE          : 27
GREATEQ              : 20
GREATER              : 16
IF                   : 49 50
IN                   : 25
LBRACE               : 1 2
LESS                 : 17
LESSEQ               : 21
LPAREN               : 10 11 35 49 50 53
LSQUARE              : 36 41 47
MINUS                : 13
MOD                  : 18
NOTEQUALTO           : 26
NUMBER               : 29
OR                   : 23
PLUS                 : 12
PRINT                : 10 11
RBRACE               : 1 2
RPAREN               : 10 11 35 49 50 53
RSQUARE              : 36 41 47
SEMI                 : 10 11 43 46
STR                  : 33
TIMES                : 14
TRUE                 : 31
VAR                  : 11 43 45 46 47
VARASSIGN            : 43 46
WHILE                : 53
error                : 

Nonterminals, with rules where they appear

array                : 41 46
assign               : 8
block                : 4 6 49 50 50 53 0
boolean              : 9 30
element              : 37 38 39
expression           : 10 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 35 40 41 43 47 49 50 53
factor               : 28
ifelsesmt            : 51
ifsmt                : 52
inblock              : 1 3 4
index                : 42
list                 : 36 37 38
listeval             : 48
print_smt            : 7
smt                  : 3 5
variable             : 44
whilesmt             : 54
word                 : 34

Parsing method: LALR

state 0

    (0) S' -> . block
    (1) block -> . LBRACE inblock RBRACE
    (2) block -> . LBRACE RBRACE

    LBRACE          shift and go to state 1

    block                          shift and go to state 2

state 1

    (1) block -> LBRACE . inblock RBRACE
    (2) block -> LBRACE . RBRACE
    (3) inblock -> . smt inblock
    (4) inblock -> . block inblock
    (5) inblock -> . smt
    (6) inblock -> . block
    (7) smt -> . print_smt
    (8) smt -> . assign
    (9) smt -> . boolean
    (51) smt -> . ifelsesmt
    (52) smt -> . ifsmt
    (54) smt -> . whilesmt
    (1) block -> . LBRACE inblock RBRACE
    (2) block -> . LBRACE RBRACE
    (10) print_smt -> . PRINT LPAREN expression RPAREN SEMI
    (11) print_smt -> . PRINT LPAREN VAR RPAREN SEMI
    (43) assign -> . VAR VARASSIGN expression SEMI
    (46) assign -> . VAR VARASSIGN array SEMI
    (31) boolean -> . TRUE
    (32) boolean -> . FALSE
    (50) ifelsesmt -> . IF LPAREN expression RPAREN block ELSE block
    (49) ifsmt -> . IF LPAREN expression RPAREN block
    (53) whilesmt -> . WHILE LPAREN expression RPAREN block

    RBRACE          shift and go to state 17
    LBRACE          shift and go to state 1
    PRINT           shift and go to state 6
    VAR             shift and go to state 12
    TRUE            shift and go to state 18
    FALSE           shift and go to state 5
    IF              shift and go to state 16
    WHILE           shift and go to state 15

    ifelsesmt                      shift and go to state 9
    assign                         shift and go to state 10
    block                          shift and go to state 14
    inblock                        shift and go to state 3
    print_smt                      shift and go to state 4
    smt                            shift and go to state 11
    whilesmt                       shift and go to state 13
    ifsmt                          shift and go to state 8
    boolean                        shift and go to state 7

state 2

    (0) S' -> block .



state 3

    (1) block -> LBRACE inblock . RBRACE

    RBRACE          shift and go to state 19


state 4

    (7) smt -> print_smt .

    LBRACE          reduce using rule 7 (smt -> print_smt .)
    PRINT           reduce using rule 7 (smt -> print_smt .)
    VAR             reduce using rule 7 (smt -> print_smt .)
    TRUE            reduce using rule 7 (smt -> print_smt .)
    FALSE           reduce using rule 7 (smt -> print_smt .)
    IF              reduce using rule 7 (smt -> print_smt .)
    WHILE           reduce using rule 7 (smt -> print_smt .)
    RBRACE          reduce using rule 7 (smt -> print_smt .)


state 5

    (32) boolean -> FALSE .

    PLUS            reduce using rule 32 (boolean -> FALSE .)
    MINUS           reduce using rule 32 (boolean -> FALSE .)
    TIMES           reduce using rule 32 (boolean -> FALSE .)
    DIVIDE          reduce using rule 32 (boolean -> FALSE .)
    GREATER         reduce using rule 32 (boolean -> FALSE .)
    LESS            reduce using rule 32 (boolean -> FALSE .)
    MOD             reduce using rule 32 (boolean -> FALSE .)
    EXPONENT        reduce using rule 32 (boolean -> FALSE .)
    GREATEQ         reduce using rule 32 (boolean -> FALSE .)
    LESSEQ          reduce using rule 32 (boolean -> FALSE .)
    AND             reduce using rule 32 (boolean -> FALSE .)
    OR              reduce using rule 32 (boolean -> FALSE .)
    EQUALS          reduce using rule 32 (boolean -> FALSE .)
    IN              reduce using rule 32 (boolean -> FALSE .)
    NOTEQUALTO      reduce using rule 32 (boolean -> FALSE .)
    FLOORDIVIDE     reduce using rule 32 (boolean -> FALSE .)
    RPAREN          reduce using rule 32 (boolean -> FALSE .)
    SEMI            reduce using rule 32 (boolean -> FALSE .)
    COMMA           reduce using rule 32 (boolean -> FALSE .)
    LPAREN          reduce using rule 32 (boolean -> FALSE .)
    NUMBER          reduce using rule 32 (boolean -> FALSE .)
    TRUE            reduce using rule 32 (boolean -> FALSE .)
    FALSE           reduce using rule 32 (boolean -> FALSE .)
    STR             reduce using rule 32 (boolean -> FALSE .)
    VAR             reduce using rule 32 (boolean -> FALSE .)
    LSQUARE         reduce using rule 32 (boolean -> FALSE .)
    RSQUARE         reduce using rule 32 (boolean -> FALSE .)
    LBRACE          reduce using rule 32 (boolean -> FALSE .)
    PRINT           reduce using rule 32 (boolean -> FALSE .)
    IF              reduce using rule 32 (boolean -> FALSE .)
    WHILE           reduce using rule 32 (boolean -> FALSE .)
    RBRACE          reduce using rule 32 (boolean -> FALSE .)


state 6

    (10) print_smt -> PRINT . LPAREN expression RPAREN SEMI
    (11) print_smt -> PRINT . LPAREN VAR RPAREN SEMI

    LPAREN          shift and go to state 20


state 7

    (9) smt -> boolean .

    LBRACE          reduce using rule 9 (smt -> boolean .)
    PRINT           reduce using rule 9 (smt -> boolean .)
    VAR             reduce using rule 9 (smt -> boolean .)
    TRUE            reduce using rule 9 (smt -> boolean .)
    FALSE           reduce using rule 9 (smt -> boolean .)
    IF              reduce using rule 9 (smt -> boolean .)
    WHILE           reduce using rule 9 (smt -> boolean .)
    RBRACE          reduce using rule 9 (smt -> boolean .)


state 8

    (52) smt -> ifsmt .

    LBRACE          reduce using rule 52 (smt -> ifsmt .)
    PRINT           reduce using rule 52 (smt -> ifsmt .)
    VAR             reduce using rule 52 (smt -> ifsmt .)
    TRUE            reduce using rule 52 (smt -> ifsmt .)
    FALSE           reduce using rule 52 (smt -> ifsmt .)
    IF              reduce using rule 52 (smt -> ifsmt .)
    WHILE           reduce using rule 52 (smt -> ifsmt .)
    RBRACE          reduce using rule 52 (smt -> ifsmt .)


state 9

    (51) smt -> ifelsesmt .

    LBRACE          reduce using rule 51 (smt -> ifelsesmt .)
    PRINT           reduce using rule 51 (smt -> ifelsesmt .)
    VAR             reduce using rule 51 (smt -> ifelsesmt .)
    TRUE            reduce using rule 51 (smt -> ifelsesmt .)
    FALSE           reduce using rule 51 (smt -> ifelsesmt .)
    IF              reduce using rule 51 (smt -> ifelsesmt .)
    WHILE           reduce using rule 51 (smt -> ifelsesmt .)
    RBRACE          reduce using rule 51 (smt -> ifelsesmt .)


state 10

    (8) smt -> assign .

    LBRACE          reduce using rule 8 (smt -> assign .)
    PRINT           reduce using rule 8 (smt -> assign .)
    VAR             reduce using rule 8 (smt -> assign .)
    TRUE            reduce using rule 8 (smt -> assign .)
    FALSE           reduce using rule 8 (smt -> assign .)
    IF              reduce using rule 8 (smt -> assign .)
    WHILE           reduce using rule 8 (smt -> assign .)
    RBRACE          reduce using rule 8 (smt -> assign .)


state 11

    (3) inblock -> smt . inblock
    (5) inblock -> smt .
    (3) inblock -> . smt inblock
    (4) inblock -> . block inblock
    (5) inblock -> . smt
    (6) inblock -> . block
    (7) smt -> . print_smt
    (8) smt -> . assign
    (9) smt -> . boolean
    (51) smt -> . ifelsesmt
    (52) smt -> . ifsmt
    (54) smt -> . whilesmt
    (1) block -> . LBRACE inblock RBRACE
    (2) block -> . LBRACE RBRACE
    (10) print_smt -> . PRINT LPAREN expression RPAREN SEMI
    (11) print_smt -> . PRINT LPAREN VAR RPAREN SEMI
    (43) assign -> . VAR VARASSIGN expression SEMI
    (46) assign -> . VAR VARASSIGN array SEMI
    (31) boolean -> . TRUE
    (32) boolean -> . FALSE
    (50) ifelsesmt -> . IF LPAREN expression RPAREN block ELSE block
    (49) ifsmt -> . IF LPAREN expression RPAREN block
    (53) whilesmt -> . WHILE LPAREN expression RPAREN block

    RBRACE          reduce using rule 5 (inblock -> smt .)
    LBRACE          shift and go to state 1
    PRINT           shift and go to state 6
    VAR             shift and go to state 12
    TRUE            shift and go to state 18
    FALSE           shift and go to state 5
    IF              shift and go to state 16
    WHILE           shift and go to state 15

    ifelsesmt                      shift and go to state 9
    assign                         shift and go to state 10
    block                          shift and go to state 14
    inblock                        shift and go to state 21
    print_smt                      shift and go to state 4
    smt                            shift and go to state 11
    whilesmt                       shift and go to state 13
    ifsmt                          shift and go to state 8
    boolean                        shift and go to state 7

state 12

    (43) assign -> VAR . VARASSIGN expression SEMI
    (46) assign -> VAR . VARASSIGN array SEMI

    VARASSIGN       shift and go to state 22


state 13

    (54) smt -> whilesmt .

    LBRACE          reduce using rule 54 (smt -> whilesmt .)
    PRINT           reduce using rule 54 (smt -> whilesmt .)
    VAR             reduce using rule 54 (smt -> whilesmt .)
    TRUE            reduce using rule 54 (smt -> whilesmt .)
    FALSE           reduce using rule 54 (smt -> whilesmt .)
    IF              reduce using rule 54 (smt -> whilesmt .)
    WHILE           reduce using rule 54 (smt -> whilesmt .)
    RBRACE          reduce using rule 54 (smt -> whilesmt .)


state 14

    (4) inblock -> block . inblock
    (6) inblock -> block .
    (3) inblock -> . smt inblock
    (4) inblock -> . block inblock
    (5) inblock -> . smt
    (6) inblock -> . block
    (7) smt -> . print_smt
    (8) smt -> . assign
    (9) smt -> . boolean
    (51) smt -> . ifelsesmt
    (52) smt -> . ifsmt
    (54) smt -> . whilesmt
    (1) block -> . LBRACE inblock RBRACE
    (2) block -> . LBRACE RBRACE
    (10) print_smt -> . PRINT LPAREN expression RPAREN SEMI
    (11) print_smt -> . PRINT LPAREN VAR RPAREN SEMI
    (43) assign -> . VAR VARASSIGN expression SEMI
    (46) assign -> . VAR VARASSIGN array SEMI
    (31) boolean -> . TRUE
    (32) boolean -> . FALSE
    (50) ifelsesmt -> . IF LPAREN expression RPAREN block ELSE block
    (49) ifsmt -> . IF LPAREN expression RPAREN block
    (53) whilesmt -> . WHILE LPAREN expression RPAREN block

    RBRACE          reduce using rule 6 (inblock -> block .)
    LBRACE          shift and go to state 1
    PRINT           shift and go to state 6
    VAR             shift and go to state 12
    TRUE            shift and go to state 18
    FALSE           shift and go to state 5
    IF              shift and go to state 16
    WHILE           shift and go to state 15

    ifelsesmt                      shift and go to state 9
    assign                         shift and go to state 10
    block                          shift and go to state 14
    inblock                        shift and go to state 23
    print_smt                      shift and go to state 4
    smt                            shift and go to state 11
    whilesmt                       shift and go to state 13
    ifsmt                          shift and go to state 8
    boolean                        shift and go to state 7

state 15

    (53) whilesmt -> WHILE . LPAREN expression RPAREN block

    LPAREN          shift and go to state 24


state 16

    (50) ifelsesmt -> IF . LPAREN expression RPAREN block ELSE block
    (49) ifsmt -> IF . LPAREN expression RPAREN block

    LPAREN          shift and go to state 25


state 17

    (2) block -> LBRACE RBRACE .

    LBRACE          reduce using rule 2 (block -> LBRACE RBRACE .)
    PRINT           reduce using rule 2 (block -> LBRACE RBRACE .)
    VAR             reduce using rule 2 (block -> LBRACE RBRACE .)
    TRUE            reduce using rule 2 (block -> LBRACE RBRACE .)
    FALSE           reduce using rule 2 (block -> LBRACE RBRACE .)
    IF              reduce using rule 2 (block -> LBRACE RBRACE .)
    WHILE           reduce using rule 2 (block -> LBRACE RBRACE .)
    RBRACE          reduce using rule 2 (block -> LBRACE RBRACE .)
    ELSE            reduce using rule 2 (block -> LBRACE RBRACE .)
    $end            reduce using rule 2 (block -> LBRACE RBRACE .)


state 18

    (31) boolean -> TRUE .

    PLUS            reduce using rule 31 (boolean -> TRUE .)
    MINUS           reduce using rule 31 (boolean -> TRUE .)
    TIMES           reduce using rule 31 (boolean -> TRUE .)
    DIVIDE          reduce using rule 31 (boolean -> TRUE .)
    GREATER         reduce using rule 31 (boolean -> TRUE .)
    LESS            reduce using rule 31 (boolean -> TRUE .)
    MOD             reduce using rule 31 (boolean -> TRUE .)
    EXPONENT        reduce using rule 31 (boolean -> TRUE .)
    GREATEQ         reduce using rule 31 (boolean -> TRUE .)
    LESSEQ          reduce using rule 31 (boolean -> TRUE .)
    AND             reduce using rule 31 (boolean -> TRUE .)
    OR              reduce using rule 31 (boolean -> TRUE .)
    EQUALS          reduce using rule 31 (boolean -> TRUE .)
    IN              reduce using rule 31 (boolean -> TRUE .)
    NOTEQUALTO      reduce using rule 31 (boolean -> TRUE .)
    FLOORDIVIDE     reduce using rule 31 (boolean -> TRUE .)
    RPAREN          reduce using rule 31 (boolean -> TRUE .)
    SEMI            reduce using rule 31 (boolean -> TRUE .)
    COMMA           reduce using rule 31 (boolean -> TRUE .)
    LPAREN          reduce using rule 31 (boolean -> TRUE .)
    NUMBER          reduce using rule 31 (boolean -> TRUE .)
    TRUE            reduce using rule 31 (boolean -> TRUE .)
    FALSE           reduce using rule 31 (boolean -> TRUE .)
    STR             reduce using rule 31 (boolean -> TRUE .)
    VAR             reduce using rule 31 (boolean -> TRUE .)
    LSQUARE         reduce using rule 31 (boolean -> TRUE .)
    RSQUARE         reduce using rule 31 (boolean -> TRUE .)
    LBRACE          reduce using rule 31 (boolean -> TRUE .)
    PRINT           reduce using rule 31 (boolean -> TRUE .)
    IF              reduce using rule 31 (boolean -> TRUE .)
    WHILE           reduce using rule 31 (boolean -> TRUE .)
    RBRACE          reduce using rule 31 (boolean -> TRUE .)


state 19

    (1) block -> LBRACE inblock RBRACE .

    LBRACE          reduce using rule 1 (block -> LBRACE inblock RBRACE .)
    PRINT           reduce using rule 1 (block -> LBRACE inblock RBRACE .)
    VAR             reduce using rule 1 (block -> LBRACE inblock RBRACE .)
    TRUE            reduce using rule 1 (block -> LBRACE inblock RBRACE .)
    FALSE           reduce using rule 1 (block -> LBRACE inblock RBRACE .)
    IF              reduce using rule 1 (block -> LBRACE inblock RBRACE .)
    WHILE           reduce using rule 1 (block -> LBRACE inblock RBRACE .)
    RBRACE          reduce using rule 1 (block -> LBRACE inblock RBRACE .)
    ELSE            reduce using rule 1 (block -> LBRACE inblock RBRACE .)
    $end            reduce using rule 1 (block -> LBRACE inblock RBRACE .)


state 20

    (10) print_smt -> PRINT LPAREN . expression RPAREN SEMI
    (11) print_smt -> PRINT LPAREN . VAR RPAREN SEMI
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression GREATER expression
    (17) expression -> . expression LESS expression
    (18) expression -> . expression MOD expression
    (19) expression -> . expression EXPONENT expression
    (20) expression -> . expression GREATEQ expression
    (21) expression -> . expression LESSEQ expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression EQUALS expression
    (25) expression -> . expression IN expression
    (26) expression -> . expression NOTEQUALTO expression
    (27) expression -> . expression FLOORDIVIDE expression
    (28) expression -> . factor
    (30) expression -> . boolean
    (34) expression -> . word
    (35) expression -> . LPAREN expression RPAREN
    (42) expression -> . index
    (44) expression -> . variable
    (48) expression -> . listeval
    (29) factor -> . NUMBER
    (31) boolean -> . TRUE
    (32) boolean -> . FALSE
    (33) word -> . STR
    (41) index -> . array LSQUARE expression RSQUARE
    (45) variable -> . VAR
    (47) listeval -> . VAR LSQUARE expression RSQUARE
    (36) array -> . LSQUARE list RSQUARE

    VAR             shift and go to state 28
    LPAREN          shift and go to state 36
    NUMBER          shift and go to state 38
    TRUE            shift and go to state 18
    FALSE           shift and go to state 5
    STR             shift and go to state 34
    LSQUARE         shift and go to state 27

    factor                         shift and go to state 32
    listeval                       shift and go to state 33
    array                          shift and go to state 30
    index                          shift and go to state 35
    boolean                        shift and go to state 29
    variable                       shift and go to state 26
    expression                     shift and go to state 31
    word                           shift and go to state 37

state 21

    (3) inblock -> smt inblock .

    RBRACE          reduce using rule 3 (inblock -> smt inblock .)


state 22

    (43) assign -> VAR VARASSIGN . expression SEMI
    (46) assign -> VAR VARASSIGN . array SEMI
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression GREATER expression
    (17) expression -> . expression LESS expression
    (18) expression -> . expression MOD expression
    (19) expression -> . expression EXPONENT expression
    (20) expression -> . expression GREATEQ expression
    (21) expression -> . expression LESSEQ expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression EQUALS expression
    (25) expression -> . expression IN expression
    (26) expression -> . expression NOTEQUALTO expression
    (27) expression -> . expression FLOORDIVIDE expression
    (28) expression -> . factor
    (30) expression -> . boolean
    (34) expression -> . word
    (35) expression -> . LPAREN expression RPAREN
    (42) expression -> . index
    (44) expression -> . variable
    (48) expression -> . listeval
    (36) array -> . LSQUARE list RSQUARE
    (29) factor -> . NUMBER
    (31) boolean -> . TRUE
    (32) boolean -> . FALSE
    (33) word -> . STR
    (41) index -> . array LSQUARE expression RSQUARE
    (45) variable -> . VAR
    (47) listeval -> . VAR LSQUARE expression RSQUARE

    LPAREN          shift and go to state 36
    LSQUARE         shift and go to state 27
    NUMBER          shift and go to state 38
    TRUE            shift and go to state 18
    FALSE           shift and go to state 5
    STR             shift and go to state 34
    VAR             shift and go to state 39

    factor                         shift and go to state 32
    listeval                       shift and go to state 33
    index                          shift and go to state 35
    boolean                        shift and go to state 29
    expression                     shift and go to state 41
    variable                       shift and go to state 26
    array                          shift and go to state 40
    word                           shift and go to state 37

state 23

    (4) inblock -> block inblock .

    RBRACE          reduce using rule 4 (inblock -> block inblock .)


state 24

    (53) whilesmt -> WHILE LPAREN . expression RPAREN block
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression GREATER expression
    (17) expression -> . expression LESS expression
    (18) expression -> . expression MOD expression
    (19) expression -> . expression EXPONENT expression
    (20) expression -> . expression GREATEQ expression
    (21) expression -> . expression LESSEQ expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression EQUALS expression
    (25) expression -> . expression IN expression
    (26) expression -> . expression NOTEQUALTO expression
    (27) expression -> . expression FLOORDIVIDE expression
    (28) expression -> . factor
    (30) expression -> . boolean
    (34) expression -> . word
    (35) expression -> . LPAREN expression RPAREN
    (42) expression -> . index
    (44) expression -> . variable
    (48) expression -> . listeval
    (29) factor -> . NUMBER
    (31) boolean -> . TRUE
    (32) boolean -> . FALSE
    (33) word -> . STR
    (41) index -> . array LSQUARE expression RSQUARE
    (45) variable -> . VAR
    (47) listeval -> . VAR LSQUARE expression RSQUARE
    (36) array -> . LSQUARE list RSQUARE

    LPAREN          shift and go to state 36
    NUMBER          shift and go to state 38
    TRUE            shift and go to state 18
    FALSE           shift and go to state 5
    STR             shift and go to state 34
    VAR             shift and go to state 39
    LSQUARE         shift and go to state 27

    factor                         shift and go to state 32
    listeval                       shift and go to state 33
    array                          shift and go to state 30
    boolean                        shift and go to state 29
    variable                       shift and go to state 26
    index                          shift and go to state 35
    expression                     shift and go to state 42
    word                           shift and go to state 37

state 25

    (50) ifelsesmt -> IF LPAREN . expression RPAREN block ELSE block
    (49) ifsmt -> IF LPAREN . expression RPAREN block
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression GREATER expression
    (17) expression -> . expression LESS expression
    (18) expression -> . expression MOD expression
    (19) expression -> . expression EXPONENT expression
    (20) expression -> . expression GREATEQ expression
    (21) expression -> . expression LESSEQ expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression EQUALS expression
    (25) expression -> . expression IN expression
    (26) expression -> . expression NOTEQUALTO expression
    (27) expression -> . expression FLOORDIVIDE expression
    (28) expression -> . factor
    (30) expression -> . boolean
    (34) expression -> . word
    (35) expression -> . LPAREN expression RPAREN
    (42) expression -> . index
    (44) expression -> . variable
    (48) expression -> . listeval
    (29) factor -> . NUMBER
    (31) boolean -> . TRUE
    (32) boolean -> . FALSE
    (33) word -> . STR
    (41) index -> . array LSQUARE expression RSQUARE
    (45) variable -> . VAR
    (47) listeval -> . VAR LSQUARE expression RSQUARE
    (36) array -> . LSQUARE list RSQUARE

    LPAREN          shift and go to state 36
    NUMBER          shift and go to state 38
    TRUE            shift and go to state 18
    FALSE           shift and go to state 5
    STR             shift and go to state 34
    VAR             shift and go to state 39
    LSQUARE         shift and go to state 27

    factor                         shift and go to state 32
    listeval                       shift and go to state 33
    array                          shift and go to state 30
    boolean                        shift and go to state 29
    variable                       shift and go to state 26
    index                          shift and go to state 35
    expression                     shift and go to state 43
    word                           shift and go to state 37

state 26

    (44) expression -> variable .

    PLUS            reduce using rule 44 (expression -> variable .)
    MINUS           reduce using rule 44 (expression -> variable .)
    TIMES           reduce using rule 44 (expression -> variable .)
    DIVIDE          reduce using rule 44 (expression -> variable .)
    GREATER         reduce using rule 44 (expression -> variable .)
    LESS            reduce using rule 44 (expression -> variable .)
    MOD             reduce using rule 44 (expression -> variable .)
    EXPONENT        reduce using rule 44 (expression -> variable .)
    GREATEQ         reduce using rule 44 (expression -> variable .)
    LESSEQ          reduce using rule 44 (expression -> variable .)
    AND             reduce using rule 44 (expression -> variable .)
    OR              reduce using rule 44 (expression -> variable .)
    EQUALS          reduce using rule 44 (expression -> variable .)
    IN              reduce using rule 44 (expression -> variable .)
    NOTEQUALTO      reduce using rule 44 (expression -> variable .)
    FLOORDIVIDE     reduce using rule 44 (expression -> variable .)
    RPAREN          reduce using rule 44 (expression -> variable .)
    SEMI            reduce using rule 44 (expression -> variable .)
    COMMA           reduce using rule 44 (expression -> variable .)
    LPAREN          reduce using rule 44 (expression -> variable .)
    NUMBER          reduce using rule 44 (expression -> variable .)
    TRUE            reduce using rule 44 (expression -> variable .)
    FALSE           reduce using rule 44 (expression -> variable .)
    STR             reduce using rule 44 (expression -> variable .)
    VAR             reduce using rule 44 (expression -> variable .)
    LSQUARE         reduce using rule 44 (expression -> variable .)
    RSQUARE         reduce using rule 44 (expression -> variable .)


state 27

    (36) array -> LSQUARE . list RSQUARE
    (37) list -> . element COMMA list
    (38) list -> . element list
    (39) list -> . element
    (40) element -> . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression GREATER expression
    (17) expression -> . expression LESS expression
    (18) expression -> . expression MOD expression
    (19) expression -> . expression EXPONENT expression
    (20) expression -> . expression GREATEQ expression
    (21) expression -> . expression LESSEQ expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression EQUALS expression
    (25) expression -> . expression IN expression
    (26) expression -> . expression NOTEQUALTO expression
    (27) expression -> . expression FLOORDIVIDE expression
    (28) expression -> . factor
    (30) expression -> . boolean
    (34) expression -> . word
    (35) expression -> . LPAREN expression RPAREN
    (42) expression -> . index
    (44) expression -> . variable
    (48) expression -> . listeval
    (29) factor -> . NUMBER
    (31) boolean -> . TRUE
    (32) boolean -> . FALSE
    (33) word -> . STR
    (41) index -> . array LSQUARE expression RSQUARE
    (45) variable -> . VAR
    (47) listeval -> . VAR LSQUARE expression RSQUARE
    (36) array -> . LSQUARE list RSQUARE

    LPAREN          shift and go to state 36
    NUMBER          shift and go to state 38
    TRUE            shift and go to state 18
    FALSE           shift and go to state 5
    STR             shift and go to state 34
    VAR             shift and go to state 39
    LSQUARE         shift and go to state 27

    factor                         shift and go to state 32
    listeval                       shift and go to state 33
    array                          shift and go to state 30
    list                           shift and go to state 45
    boolean                        shift and go to state 29
    variable                       shift and go to state 26
    index                          shift and go to state 35
    element                        shift and go to state 46
    word                           shift and go to state 37
    expression                     shift and go to state 44

state 28

    (11) print_smt -> PRINT LPAREN VAR . RPAREN SEMI
    (45) variable -> VAR .
    (47) listeval -> VAR . LSQUARE expression RSQUARE

    RPAREN          reduce using rule 45 (variable -> VAR .)
    PLUS            reduce using rule 45 (variable -> VAR .)
    MINUS           reduce using rule 45 (variable -> VAR .)
    TIMES           reduce using rule 45 (variable -> VAR .)
    DIVIDE          reduce using rule 45 (variable -> VAR .)
    GREATER         reduce using rule 45 (variable -> VAR .)
    LESS            reduce using rule 45 (variable -> VAR .)
    MOD             reduce using rule 45 (variable -> VAR .)
    EXPONENT        reduce using rule 45 (variable -> VAR .)
    GREATEQ         reduce using rule 45 (variable -> VAR .)
    LESSEQ          reduce using rule 45 (variable -> VAR .)
    AND             reduce using rule 45 (variable -> VAR .)
    OR              reduce using rule 45 (variable -> VAR .)
    EQUALS          reduce using rule 45 (variable -> VAR .)
    IN              reduce using rule 45 (variable -> VAR .)
    NOTEQUALTO      reduce using rule 45 (variable -> VAR .)
    FLOORDIVIDE     reduce using rule 45 (variable -> VAR .)
    LSQUARE         shift and go to state 48

  ! RPAREN          [ shift and go to state 47 ]


state 29

    (30) expression -> boolean .

    PLUS            reduce using rule 30 (expression -> boolean .)
    MINUS           reduce using rule 30 (expression -> boolean .)
    TIMES           reduce using rule 30 (expression -> boolean .)
    DIVIDE          reduce using rule 30 (expression -> boolean .)
    GREATER         reduce using rule 30 (expression -> boolean .)
    LESS            reduce using rule 30 (expression -> boolean .)
    MOD             reduce using rule 30 (expression -> boolean .)
    EXPONENT        reduce using rule 30 (expression -> boolean .)
    GREATEQ         reduce using rule 30 (expression -> boolean .)
    LESSEQ          reduce using rule 30 (expression -> boolean .)
    AND             reduce using rule 30 (expression -> boolean .)
    OR              reduce using rule 30 (expression -> boolean .)
    EQUALS          reduce using rule 30 (expression -> boolean .)
    IN              reduce using rule 30 (expression -> boolean .)
    NOTEQUALTO      reduce using rule 30 (expression -> boolean .)
    FLOORDIVIDE     reduce using rule 30 (expression -> boolean .)
    RPAREN          reduce using rule 30 (expression -> boolean .)
    SEMI            reduce using rule 30 (expression -> boolean .)
    COMMA           reduce using rule 30 (expression -> boolean .)
    LPAREN          reduce using rule 30 (expression -> boolean .)
    NUMBER          reduce using rule 30 (expression -> boolean .)
    TRUE            reduce using rule 30 (expression -> boolean .)
    FALSE           reduce using rule 30 (expression -> boolean .)
    STR             reduce using rule 30 (expression -> boolean .)
    VAR             reduce using rule 30 (expression -> boolean .)
    LSQUARE         reduce using rule 30 (expression -> boolean .)
    RSQUARE         reduce using rule 30 (expression -> boolean .)


state 30

    (41) index -> array . LSQUARE expression RSQUARE

    LSQUARE         shift and go to state 49


state 31
